# nmea_bridge

./: NMEA.py  README.md  dogica_gps.py  freesans11.py  freesans20.py  l76x.py  main.py  roboto12.py  roboto14.py  rs485test.py  waveshare_rs485_test.py
doc/Pico_2CH_RS485-1/c/: CMakeLists.txt  ReadmeCN.txt  ReadmeEN.txt
doc/Pico_2CH_RS485-1/c/RS485_irq/: CMakeLists.txt
doc/Pico_2CH_RS485-1/c/RS485_irq/RS485_irq/: CMakeLists.txt  RS485_irq.c
doc/Pico_2CH_RS485-1/c/RS485_receive/: CMakeLists.txt
doc/Pico_2CH_RS485-1/c/RS485_receive/RS485_receive/: CMakeLists.txt  RS485_receive.c
doc/Pico_2CH_RS485-1/c/RS485_send/: CMakeLists.txt
doc/Pico_2CH_RS485-1/c/RS485_send/RS485_send/: CMakeLists.txt  RS485_send.c
doc/Pico_2CH_RS485-1/c/uf2/: RS485_irq.uf2  RS485_receive.uf2  RS485_send.uf2
doc/Pico_2CH_RS485-1/python/: RS485_receive.py  RS485_send.py  ReadmeCN.txt  ReadmeEN.txt
doc/Pico_code_OLED/c/: CMakeLists.txt
doc/Pico_code_OLED/c/uf2/pico2/: LCD_0in96.uf2  LCD_1in14.uf2  LCD_1in14_V2.uf2  LCD_1in3.uf2  LCD_1in44.uf2  LCD_1in8.uf2  LCD_2in.uf2  OLED_1in3_C_test_SPI.uf2  OLED_2in23_C_test_I2C.uf2  OLED_2in23_C_test_SPI.uf2
doc/python_GPS/L76/example/: gnss_settings.py  print_nmea0183.py
lib/: NMEA_parser.py  l76x.py
lib/copy-3.3.4.dist-info/: METADATA  RECORD
